--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,7 @@ h1::after{
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: #3F72AF;
+    background-color: #3f71afa8;
     z-index: -1;
     transition: all .5s;
 }
